2013-05-29 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Headers/Foundation/NSString.h
	  make NSStringEncoding enum typdef to NSUInteger
	* Source/Additions/Unicode.m
	  fix format string to print out NSStringEncoding

2013-05-17  Ivan Vučica <ivan@vucica.net>

	* Source/NSDate.m:
	In case NAN macro is defined in math.h, prefer that over
	using the nan() function call.

2013-05-17  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSMessagePortNameServer.m: fix error in line count check
        in last change.

2013-05-16  Ivan Vučica <ivan@vucica.net>

	* Source/GSLocale.m:
	* configure.ac:
	Added check for whether there is any useful information in
	struct lconv. Android doesn't have anything there, despite
	having locale.h, so it makes little sense to try to access
	the nonexistent fields in GSLocale.m

2013-05-16  Ivan Vučica <ivan@vucica.net>

	* configure.ac:
	* cross.config:
	When cross-compiling, obeying an additional setting for
	Objective-C 2.0 support. Fixed a missing '$' in cross.config.

2013-05-15  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSMessagePortNameServer.m: fix for bug #38981

2013-05-13  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Foundation/NSKeyedArchiver.h,
	* Source/NSKeyedUnarchiver.m: Add method
	-replaceObject:withObject: from gui.

2013-05-13  Fred Kiefer <FredKiefer@gmx.de>

	* Tests/base/NSArchiver/stringEncoding.m: Use PASS_EQUAL instead
	of PASS.

2013-05-13  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/ObjectiveC2/runtime.c: when replacing a method, update the
        cache so we don't use the old version.
        * Source/NSNotificationCenter.m: trivial tweak to map release code
        and remove method caching for OSX compatibility :-(
        * Source/NSPropertyList.m: Fix bug byte swapping unicode in apple
        binary plist generation.
        * Tests/base/NSNotification/dynamic.m: Fix crash in testcase.

2013-05-13  Richard Frith-Macdonald <rfm@gnu.org>
